<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyt_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/general_padding"
    tools:context=".view.topics.TopicsFragment">

    <TextView
        android:id="@+id/textView4"
        style="@style/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/topics_title" />

    <TextView
        android:id="@+id/textView5"
        style="@style/normalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/general_padding"
        android:text="@string/topics_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            app:helperText="@string/new_topic_help_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtFld_newTopic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_topic_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imgVw_addTopic"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/icon_button_padding"
            android:src="@drawable/ic_circle_add"
            android:tint="@color/colorSecondary"
            app:srcCompat="@drawable/ic_circle_add"
            tools:srcCompat="@drawable/ic_circle_add" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>