...
    <string name="track_desc">Below you can see the conference schedule</string>
    <string name="topics_title">Topics List</string>
    <string name="topics_desc">Here you can add and delete conference topics</string>
    <string name="new_topic_hint">Add conference topics</string>
    <string name="new_topic_help_text">Use the format: Topic #duration. Exm: Kotlin 45min</string>
    <string name="time_format">%1$d minutes</string>
    <string name="success_removed_topic">Topic removed successfully</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="format_event_error">El nombre del evento contiene caracteres inválidos</string>
    <string name="topics_item">Topics</string>
    <string name="result_item">Result</string>
    <string name="info_item">Info</string>
    <string name="info_title">App Information</string>
    <string name="info_subTitle">CONFERENCE TRACK MANAGEMENT</string>
    <string name="info_desc">You are planning a big programming conference and have received many
...
