<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fissa.conferencemanagement.view.MainActivity">
    <item
        android:id="@+id/topics"
        android:title="@string/topics_item"
        android:icon="@drawable/ic_list"
        />

    <item
        android:id="@+id/result"
        android:title="@string/result_item"
        android:icon="@drawable/ic_clock"
        />

    <item
        android:id="@+id/info"
        android:title="@string/info_item"
        android:icon="@drawable/ic_info"
        />

</menu>